# name: TestDimeNet.test_energy_force_shape
  Size(
    1,
    1,
  )
# ---
# name: TestDimeNet.test_energy_force_shape.1
  Approx(
  	array([[0.]], dtype=float32)
  )
# ---
# name: TestDimeNet.test_energy_force_shape.2
  Size(
    34,
    3,
  )
# ---
# name: TestDimeNet.test_energy_force_shape.3
  Approx(
  	array([[-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.],
  	       [-0., -0., -0.]], dtype=float32)
  )
# ---
